--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web3": "^1.8.0"
   },
   "scripts": {
-    "start": "export PORT=3001 && react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
